전체적으로 코드 수정