@@ -1,11 +1,13 @@
 package tpo.capstone.auth;
 
 import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 import tpo.capstone.entity.UserAccount;
 
 import java.util.Collection;
 import java.util.Collections;
+import java.util.List;
 
 public class CustomUserDetails implements UserDetails {
 
@@ -17,8 +19,7 @@ public class CustomUserDetails implements UserDetails {
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        // 권한을 반환하는 메서드. 현재는 빈 리스트를 반환하고 있지만, 필요에 따라 사용자 권한을 추가할 수 있음.
-        return Collections.emptyList();
+        return List.of(new SimpleGrantedAuthority("ROLE_USER")); // 기본 권한 설정
     }
 
     @Override
@@ -41,25 +42,29 @@ public class CustomUserDetails implements UserDetails {
 
     @Override
     public boolean isAccountNonExpired() {
-        return true; // 계정이 만료되지 않았는지 여부를 반환
+        return true; // 계정 만료 상태
     }
 
     @Override
     public boolean isAccountNonLocked() {
-        return true; // 계정이 잠기지 않았는지 여부를 반환
+        return true; // 계정 잠금 상태
     }
 
     @Override
     public boolean isCredentialsNonExpired() {
-        return true; // 자격 증명이 만료되지 않았는지 여부를 반환
+        return true; // 자격 증명 만료 상태
     }
 
     @Override
     public boolean isEnabled() {
-        return true; // 계정이 활성화되었는지 여부를 반환
+        return true; // 계정 활성 상태
     }
 
     public UserAccount getUser() {
-        return user; // UserAccount 객체를 반환하는 메서드
+        return user;
+    }
+
+    public Long getId() {
+        return user.getId(); // 사용자 ID 반환
     }
 }
